--- a/P01DAW_[2022MM652 2022AR652]_Reservas/appsettings.json
+++ b/P01DAW_[2022MM652 2022AR652]_Reservas/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=LAPTOP-NS6Q6ARS\\MSSQLSERVER2;Database=ReservasDB;User Id=sa;Password=Tosteca03;TrustServerCertificate=True"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
